@@ -1,5 +1,4 @@
 [warning]
-cp-library-deconstruction-planners-support=[color=yellow][WARNING][/color] Deconstruction planners from library cannot be used for removing unapproved ghosts.
 cp-cleanup-command-confirm=[color=yellow][WARNING][/color] Please re-run the cp_cleanup command within 10 seconds to start the clean-up process. Make sure you have saved and backed-up the savegame before continuing in case something goes wrong.
 cp-cleanup-command-started=[color=yellow][WARNING][/color] Clean-up command is running for construction planner to fix eventual inconsistencies.
 cp-cleanup-command-finished=[color=yellow][WARNING][/color] Clean-up command for construction planner has finished running. Should you detect inconsistencies or missing ghosts, please restore game from a backup, and file a bug report.
