@@ -3,6 +3,7 @@ Version: 999.999.999
 Date: 9999-99-99
   Changes:
     - Dropped support for game version 1.1.
+    - Deconstruction planners from library are now fully supported for deconstructing unapproved ghosts.
   Features:
     - Added support for game version 2.0.
   Bugfixes:
